2009-12-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Check that
	  file exists before getting its old attributes.

2009-12-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/TinyDropDownBox.cs: Escape now
	  closes drop down.

2009-12-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/TinyDropDownBox.cs: Improved the
	  drawing of the tiny drop down box.

2009-12-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/TinyDropDownBox.cs: Keyboard now
	  works in tiny drop down.

2009-12-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/TinyDropDownBox.cs: Added spacing
	  for the right arrows.

2009-12-03  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* gtk-gui/objects.xml:
	* MonoDevelop.SourceEditor.csproj:
	* MonoDevelop.SourceEditor/DropDownBox.cs:
	* MonoDevelop.SourceEditor/TinyDropDownBox.cs:
	* MonoDevelop.SourceEditor/ClassQuickFinder.cs:
	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Added tiny
	  drop down box.

2009-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/AutoSave.cs: Name threads to make
	  debugging easier.

2009-12-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Fixed 'Bug
	  559822 - comments are folded with incorrect match'.

2009-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/StyledSourceEditorOptions.cs:
	* MonoDevelop.SourceEditor.OptionPanels/HighlightingPanel.cs:
	  Track API.

2009-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorOptions.cs: Only update
	  individual properties on property service events, instead of
	  wholesale refreshing them all on any (unrelated) property
	  service event. Prevents firing lots of change events that
	  could cause lots of unnecessary work and slowdowns
	  elsewhere.

2009-11-27  Mike Krüger  <mkrueger@novell.com>
